<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/ingreso_datos_ftp"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.app.ftp_cliente_j.IngresoUsuario">


    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:text="@string/ingrese_el_servidor"
        android:textColor="@android:color/black"
        android:textSize="18sp" />


    <EditText
        android:id="@+id/editTextServidor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView2"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/picture_frame"
        android:ems="10"
        android:hint="@string/servidor_ftp"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:autofillHints="" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextServidor"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/ingrese_su_usuario"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextUsuario"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView3"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/picture_frame"
        android:ems="10"
        android:hint="@string/usuario"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:autofillHints="" />


    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextUsuario"
        android:layout_alignParentStart="true"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/ingrese_su_contrasena"
        android:textColor="@android:color/black"
        android:textSize="18sp" />

    <EditText
        android:id="@+id/editTextClave"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textView4"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:background="@android:drawable/picture_frame"
        android:ems="10"
        android:hint="@string/contrasena"
        android:inputType="textPersonName|textPassword"
        android:minHeight="48dp"
        android:selectAllOnFocus="false"
        android:textColor="@android:color/black"
        android:textColorHint="#757575"
        android:autofillHints="" />


    <CheckBox
        android:id="@+id/checkBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextClave"
        android:buttonTint="@color/colorPrimary"
        android:checked="true"
        android:text="@string/modo_pasivo" />


    <Button
        android:id="@+id/buttonAceptar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/checkBox"
        android:layout_alignParentStart="true"
        android:layout_marginTop="25dp"
        android:text="@string/aceptar" />

    <Button
        android:id="@+id/buttonCancelar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/buttonAceptar"
        android:layout_alignEnd="@+id/editTextClave"
        android:layout_alignBottom="@+id/buttonAceptar"
        android:layout_marginEnd="-11dp"
        android:layout_marginBottom="-62dp"
        android:text="@string/cancelar" />


</RelativeLayout>